[package]
name = "todiff"
version = "0.6.1"
authors = ["Léo Gaspard <leo@gaspard.io>"]

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.8"
chrono = "0.4.19"
clap = "2.33"
diff = "0.1.11"
itertools = "0.10.0"
strsim = "0.8.0"
todo-txt = { version = "1.2", features = ["extended"] }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_yaml = { version = "0.7.5", optional = true }

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
default = []
integration_tests = ["serde", "serde_derive", "serde_yaml"]

[[test]]
name = "todiff"
path = "tests/tests.rs"
required-features = ["integration_tests"]
